대시보드 고침.