@@ -8,9 +8,11 @@ import com.hm.mes_final_260106.repository.ProductionResultRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import com.hm.mes_final_260106.constant.EquipmentStatus;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -21,6 +23,7 @@ public class DashboardService {
     private final EquipmentRepository equipmentRepo;
     private final ProductionLogRepository productionLogRepo;
 
+    @Transactional(readOnly = true)
     public DashboardSummaryResDto getSummary() {
         LocalDate today = LocalDate.now();
         LocalDate yesterday = today.minusDays(1);
@@ -32,8 +35,6 @@ public class DashboardService {
         double todayYield = productionResultRepo.avgYieldByDate(today);
         double yesterdayYield = productionResultRepo.avgYieldByDate(yesterday);
         double yieldTrend = trend(todayYield, yesterdayYield);
-
-
 
         int totalEquip = (int) equipmentRepo.count();
         int runningEquip = equipmentRepo.countByStatus(EquipmentStatus.RUN);
@@ -62,32 +63,31 @@ public class DashboardService {
     }
 
     // ===== 데이터 (백엔드 즉시 적용) =====
+    @Transactional(readOnly = true)
     public List<HourlyProductionResDto> getHourlyProduction() {
 
         // 대시보드 화면과 동일한 타임 슬롯
         // (06,08,10,12,14,16,18)
         final List<Integer> slots = List.of(6, 8, 10, 12, 14, 16, 18);
 
-        // 집계 범위는 최소~최대
-        int startHour = 6;
-        int endHour = 18;
-
         // 1) production_log에서 hour별 actual 조회
-        List<Object[]> rows =
-                productionLogRepo.findTodayHourlyCompletedOutput();
+        List<Object[]> rows = productionLogRepo.findTodayHourlyCompletedOutput();
 
         // 2) hour -> actualQty 맵핑
         Map<Integer, Integer> actualByHour = new HashMap<>();
-        for (Object[] r : rows) {
-            Integer hour = (Integer) r[0];
-            Number qty = (Number) r[1]; // Long/Integer 대비
-            actualByHour.put(hour, qty.intValue());
+        if (rows != null) {
+            for (Object[] r : rows) {
+                if (r[0] != null && r[1] != null) {
+                    Integer hour = (Integer) r[0];
+                    Number qty = (Number) r[1];
+                    actualByHour.put(hour, qty.intValue());
+                }
+            }
         }
 
         // 3) 슬롯 기준으로 DTO 생성
         List<HourlyProductionResDto> result = new ArrayList<>();
         for (Integer h : slots) {
-
             // ✅ plan은 아직 실제 테이블 연동 전이므로 임시값 유지
             int plan = switch (h) {
                 case 6 -> 400;
@@ -112,18 +112,27 @@ public class DashboardService {
         return result;
     }
 
+    @Transactional(readOnly = true)
     public List<WipBalanceResDto> getWipBalance() {
 
         List<Object[]> rows = productionLogRepo.findWipBalanceByProcess();
 
+        if (rows == null) {
+            return Collections.emptyList();
+        }
+
         return rows.stream()
                 .map(r -> new WipBalanceResDto(
-                        r[0].toString(),                 // process_step
-                        ((Number) r[1]).longValue()     // sum(result_qty)
+                        // ▼ [수정] r[0]이 NULL일 경우 "Unknown" 등으로 처리 (NullPointerException 방지)
+                        (r[0] != null) ? r[0].toString() : "Unknown",
+
+                        // ▼ [수정] r[1]이 NULL일 경우 0으로 처리
+                        (r[1] != null) ? ((Number) r[1]).longValue() : 0L
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public List<EquipmentAlertDto> getRealtimeEquipmentAlerts() {
 
         return equipmentRepo
@@ -142,10 +151,7 @@ public class DashboardService {
                 .toList();
     }
 
-
     public void ackAlert(Long id) {
         // 다음 단계: alarm 테이블 연동
     }
-
-
 }
